update file index

--- a/index.html
+++ b/index.html
@@ -6,17 +6,9 @@
     <title>Primer Clase</title>
 </head>
 <body>
-    <!-- Título de la pagina -->
-    <!-- <h1>Wilder Duarte</h1>
-    <h2>Wilder Duarte</h2>
-    <h3>Wilder Duarte</h3>
-    <h4>Wilder Duarte</h4>
-    <h5>Wilder Duarte</h5>
-    <h6>Wilder Duarte</h6>
-    <p>Wilder Duarte</p>
-    <span>Wilder Duarte</span> -->
 
     <table border="1">
+        <caption>TABLA DE POSICIONES</caption>
         <thead>
             <tr>
                 <th>EQUIPO</th>
@@ -36,7 +28,9 @@
                 <td>Argentina</td>
                 <td>4</td>
                 <td>12</td>
-                <td></td>
+                <td>
+                    <img src="img/argentina.png" alt="escudo de argentina" width="100px" height="100px">
+                </td>
             </tr>
             <tr>
                 <td>Brasil</td>
@@ -48,9 +42,16 @@
                 <td>Venezuela</td>
                 <td>2</td>
                 <td>6</td>
-                <td></td>
+                <td>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Escudo_de_la_Federaci%C3%B3n_Colombiana_de_F%C3%BAtbol.png" alt="escudo de venezuela" width="100px" height="100px">
+                </td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="4">Eliminatoria mundial 2026</td>
+            </tr>
+        </tfoot>
     </table>
 
 </body>
