--- a/index.html
+++ b/index.html
@@ -3,56 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primer Clase</title>
+    <title>Document</title>
 </head>
 <body>
+    <div>
+        <ul>
+            <li><a href="html/tablas.html"><h2>IR A TABLAS</h2></a></li>
+            <li><a href="html/form.html"><h2>IR A FORM</h2></a></li>
+            <li><a href="#"><h2>IR A TEXTO</h2></a></li>
+        </ul>
+    </div>
 
-    <table border="1">
-        <caption>TABLA DE POSICIONES</caption>
-        <thead>
-            <tr>
-                <th>EQUIPO</th>
-                <th>PARTIDOS</th>
-                <th>PUNTOS</th>
-                <th>ESCUDO</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Colombia</td>
-                <td>5</td>
-                <td>15</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Argentina</td>
-                <td>4</td>
-                <td>12</td>
-                <td>
-                    <img src="img/argentina.png" alt="escudo de argentina" width="100px" height="100px">
-                </td>
-            </tr>
-            <tr>
-                <td>Brasil</td>
-                <td>3</td>
-                <td>9</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Venezuela</td>
-                <td>2</td>
-                <td>6</td>
-                <td>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Escudo_de_la_Federaci%C3%B3n_Colombiana_de_F%C3%BAtbol.png" alt="escudo de venezuela" width="100px" height="100px">
-                </td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="4">Eliminatoria mundial 2026</td>
-            </tr>
-        </tfoot>
-    </table>
-
+    div>ul>(li>a{texto})*5
 </body>
 </html>
