--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
             <li><a href="html/tablas.html"><h2>IR A TABLAS</h2></a></li>
             <li><a href="html/form.html"><h2>IR A FORM</h2></a></li>
             <li><a href="#"><h2>IR A TEXTO</h2></a></li>
+            <li><a href="html/estilos.html"><h2>IR A ESTILOS</h2></a></li>
+
+            <!-- shift + alt + flecha_abajo ### duplica un añlinea -->
+            <!-- crtl + shift + k ### elimino la fila  -->
+            <!-- ctrl + } ### comento la seleccion o la fila -->
         </ul>
     </div>
 
