learning property flexbox and transform css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="html/form.html"><h2>IR A FORM</h2></a></li>
             <li><a href="#"><h2>IR A TEXTO</h2></a></li>
             <li><a href="html/estilos.html"><h2>IR A ESTILOS</h2></a></li>
+            <li><a href="html/flexbox.html"><h2>IR A FLEXBOX</h2></a></li>
 
             <!-- shift + alt + flecha_abajo ### duplica un añlinea -->
             <!-- crtl + shift + k ### elimino la fila  -->
