--- a/index.html
+++ b/index.html
@@ -4,22 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style_login.css">
 </head>
 <body>
-    <div>
-        <ul>
-            <li><a href="html/tablas.html"><h2>IR A TABLAS</h2></a></li>
-            <li><a href="html/form.html"><h2>IR A FORM</h2></a></li>
-            <li><a href="#"><h2>IR A TEXTO</h2></a></li>
-            <li><a href="html/estilos.html"><h2>IR A ESTILOS</h2></a></li>
-            <li><a href="html/flexbox.html"><h2>IR A FLEXBOX</h2></a></li>
-
-            <!-- shift + alt + flecha_abajo ### duplica un añlinea -->
-            <!-- crtl + shift + k ### elimino la fila  -->
-            <!-- ctrl + } ### comento la seleccion o la fila -->
-        </ul>
+    <div class="background"></div>
+    <div class="centering">
+        <form action="" class="my_form">
+            <div class="login_welcome">
+                <img src="https://img.freepik.com/vector-premium/lindo-astronauta-volando-cohete-ilustracion-icono-vector-dibujos-animados-espacio-icono-tecnologia-ciencia_138676-6486.jpg" alt="" class="login">
+                <h1>Iniciar Sesión</h1>
+            </div>
+            <div class="text_field">
+                <label for="email">Email</label>
+                <input type="email" id="email" aria-label="Email" placeholder="Ingrese su Email" required>
+                <img src="img/email.svg" alt="Email Icon" title="Email Icon">
+            </div>
+            <div class="text_field">
+                <label for="password">Password</label>
+                <input type="password" id="password" aria-label="Password" placeholder="Ingrese su Email" required>
+                <img src="https://www.svgrepo.com/show/84319/password.svg" alt="Password Icon" title="Password Icon">
+            </div>
+            <input type="submit" class="my_form_button" value="Login">
+            <div class="my_form_actions">
+                <div class="my_form_row">
+                    <span>¿Olvidaste tu contraseña?</span>
+                    <a href="#" title="Recuperar Contraseña">Recuperar Contraseña</a>
+                </div>
+                <div class="my_form_signup">
+                    <a href="#" title="Crear Cuenta">Crear Cuenta</a>
+                </div>
+            </div>
+        </form>
     </div>
-
-    div>ul>(li>a{texto})*5
 </body>
 </html>
